<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootCrearProducto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".view.CrearProductoActivity">

    <TextView
        android:id="@+id/tvTituloCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_crear_producto"
        android:textColor="@color/primario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNombreProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_estandar"
        android:hint="@string/hint_nombre_producto"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/tvTituloCrear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etDescripcionProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:hint="@string/hint_descripcion_producto"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/etNombreProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPrecioProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:hint="@string/hint_precio_producto"
        android:inputType="numberDecimal"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/etDescripcionProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etStockProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:hint="@string/hint_stock_producto"
        android:inputType="number"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/etPrecioProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLabelCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:text="@string/label_categoria"
        android:textColor="@color/texto_secundario"
        app:layout_constraintTop_toBottomOf="@id/etStockProducto"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelCategoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGuardarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_estandar"
        android:text="@string/boton_guardar_producto"
        android:backgroundTint="@color/primario"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>