<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootActualizarProducto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app" tools:context=".view.ActualizarProductoActivity">

    <TextView
        android:id="@+id/tvTituloActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_actualizar_producto"
        android:textColor="@color/primario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNombreActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_estandar"
        android:hint="@string/hint_nombre_producto"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/tvTituloActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etDescripcionActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:hint="@string/hint_descripcion_producto"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/etNombreActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPrecioActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:hint="@string/hint_precio_producto"
        android:inputType="numberDecimal"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/etDescripcionActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etStockActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:hint="@string/hint_stock_producto"
        android:inputType="number"
        android:textColor="@color/texto_principal"
        android:textColorHint="@color/texto_hint"
        app:layout_constraintTop_toBottomOf="@id/etPrecioActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLabelCategoriaActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:text="@string/label_categoria"
        android:textColor="@color/texto_secundario"
        app:layout_constraintTop_toBottomOf="@id/etStockActualizar"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategoriaActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelCategoriaActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnActualizarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_estandar"
        android:text="@string/boton_actualizar_producto"
        android:backgroundTint="@color/primario"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategoriaActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>