<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app" tools:context=".view.CatalogoProveedorActivity">

    <TextView
        android:id="@+id/tvNombreNegocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primario"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTituloCatalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/titulo_catalogo"
        android:textColor="@color/texto_secundario"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvNombreNegocio"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewCatalogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_estandar"
        android:background="@color/blanco"
        app:iconifiedByDefault="false"
        app:queryHint="@string/hint_buscar_producto"
        app:layout_constraintTop_toBottomOf="@id/tvTituloCatalogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressCatalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSinResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_resultados_busqueda"
        android:textColor="@color/texto_secundario"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCatalogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margen_estandar"
        app:layout_constraintTop_toBottomOf="@id/searchViewCatalogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>