<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootCategorias"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app" tools:context=".view.CategoriasActivity">

    <TextView
        android:id="@+id/tvTituloCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_categorias"
        android:textColor="@color/primario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNuevaCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_estandar"
        android:text="@string/boton_nueva_categoria"
        android:backgroundTint="@color/primario"
        android:textColor="@color/blanco"
        app:layout_constraintTop_toBottomOf="@id/tvTituloCategorias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSinCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_categorias"
        android:textColor="@color/texto_secundario"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategorias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margen_estandar"
        android:layout_marginBottom="@dimen/margen_estandar"
        app:layout_constraintTop_toBottomOf="@id/btnNuevaCategoria"
        app:layout_constraintBottom_toTopOf="@id/btnVolverCategorias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVolverCategorias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_volver"
        android:backgroundTint="@color/primario_oscuro"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>